--- a/S1_44.html
+++ b/S1_44.html
@@ -6,7 +6,7 @@
       <meta  name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <meta  name="mobile-web-app-capable" content="yes">
       <meta  name="apple-mobile-web-app-capable" content="yes">
-      <meta  name="apple-mobile-web-app-title" content="S 1/44 (Salve crux pretiosa)">
+      <meta  name="apple-mobile-web-app-title" content="S 1/67 (Antiphonarium Romanum)">
       <meta  name="msapplication-TileColor" content="#ffffff">
       <meta  name="msapplication-TileImage" content="images/logo.png">
       <link  rel="None" type="image/ico" href="images/favicons/favicon.ico">
@@ -32,7 +32,7 @@
       <link  rel="shortcut icon" type="image/png" href="images/favicons/favicon-196x196.png">
       <link  rel="icon" type="image/svg+xml" href="images/logo.png" sizes="any">
       <link  rel="profile" href="http://gmpg.org/xfn/11">
-      <title >S 1/44 (Salve crux pretiosa)</title>
+      <title >S 1/67 (Antiphonarium Romanum)</title>
       <link  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
       <link  rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
       <link  rel="stylesheet" href="css/style.css" type="text/css">
@@ -69,8 +69,8 @@
                      <h1><a href="A64_43.html"><i class="bi bi-chevron-left" title="zurück"></i></a></h1>
                   </div>
                   <div class="col-md-8 col-lg-8 col-sm-12 docinfo">
-                     <h1 align="center">S 1/44 (Salve crux pretiosa)</h1>
-                     <h3 align="center"><a href="S1_44.xml"><i class="bi bi-download" title="TEI/XML"></i></a></h3>
+                     <h1 align="center">S 1/67 (Antiphonarium Romanum)</h1>
+                     <h3 align="center"><a href="S1_67.xml"><i class="bi bi-download" title="TEI/XML"></i></a></h3>
                   </div>
                   <div class="col-md-2 col-lg-2 col-sm-12" style="text-align:right">
                      <h1><a href="S1_63.html"><i class="bi bi-chevron-right" title="weiter"></i></a></h1>
